fix margin on mobile

--- a/yoga-app/src/components/_PoseInfo.scss
+++ b/yoga-app/src/components/_PoseInfo.scss
@@ -28,7 +28,6 @@
 @media screen and (max-width: 768px){
   .poseInfo {
     flex-direction: column;
-    margin-top: 0;
     .yoga-image {
       max-width: 150px;
       margin-inline: 20px;
