--- a/yoga-app/src/scss/_globals.scss
+++ b/yoga-app/src/scss/_globals.scss
@@ -42,7 +42,6 @@
 // mobile
 @media screen and (max-width: 768px) {
   .main-div {
-    margin-top: 0;
     flex-direction: column;
     .main-container-welcome {
       max-width: 768px;
